2011-01-09 21:58-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSSavePanel.m: (-_initWithoutGModel): added
	code near the and to close the current menu when in Win95
	mode.  If this doesn't happen the menu remains open
	and allows the user to drag the window around while the 
	menu remains in it's old position.

2011-01-09 German Arias <german@xelalug.org>

	* Source/NSApplication.m (-activateIgnoringOtherApps:):
	If we have menu in window, set a main window when unhide.
	* Source/NSWindow.m (-resignMainWindow): Close the menu
	in window if resign main window.

2011-01-08 German Arias <german@xelalug.org>

	* Source/NSMenuView.m (-trackWithEvent:):
	Close the menu in window if user press a modifier key.
	And improvements for don't lose the mouse tracking
	in a menu in window.
	
2011-01-06 German Arias <german@xelalug.org>

	* Source/NSMenuView.m (-locationForSubmenu:, -trackWithEvent:):
	Fixed the tracking of mouse at horizontal menu.	

2011-01-04  Doug Simons  <doug.simons@testplant.com>

	* Source/NSSearchFieldCell.m:
	Fix cancel button to correctly clear the field and send action.
	Fix -textDidChange: to correctly send action rather than popping up
	the menu on each keystroke (when sendsWholeSearchString is false).
	 

2011-01-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/tiff.m (NSTiffWrite):
	Fix long standing bug where incorrect data was written out for RGB
	images if bits per sample != 8.

2011-01-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GNUmakefile:
	* Headers/Additions/GNUstepGUI/GSHelpAttachment.h:
	* Source/GSHelpAttachment.m:
	Introduce new classes GSHelpLinkAttachment and
	GSHelpMarkerAttachment to implement help links and markers in RTF
	documents.

	* TextConverters/RTF/rtfGrammar.y:
	* TextConverters/RTF/RTFConsumerFunctions.h:
	* TextConverters/RTF/RTFConsumer.m (-addHelpLink:marker:,
	-addHelpMarker:, GSRTFNeXTHelpLink, GSRTFNeXTHelpMarker):
	Create attachments for help links and markers in RTF documents.
